# 1bcoder

./: .gitignore  DEEPAGENT_MD_PLAN.md  README.md  SECURITY_RISKS.md  TaskDeepAgentMDRefRag.txt  build and deploy.txt  build.bat  chat.py  deploy_bcoder_data.bat  map_index.py  map_query.py  paper.md  pyproject.toml  requirements.txt
_bcoder_data/: aliases.txt  profiles.txt  prompts.txt
_bcoder_data/agents/: advance.txt  ask.txt  coder.txt  codex.txt  compact.txt  concepts.txt  fill.txt  planning.txt  scan.txt  sqlite.txt  terminator.txt  websearch.txt
_bcoder_data/deepagent_code/: java_decompose.txt  java_implement.txt  js_decompose.txt  js_implement.txt  kt_decompose.txt  kt_implement.txt  mysql_decompose.txt  mysql_implement.txt  plsql_decompose.txt  plsql_implement.txt  py_decompose.txt  py_implement.txt  scala_decompose.txt  scala_implement.txt  sql_decompose.txt  sql_implement.txt
_bcoder_data/doc/: FLOWS.md  OLLAMA_SERVER_PARAM.md  PARAM.md  PROC.md  TRANSLATE.md
_bcoder_data/flows/: commit_message.py  compress.py  deepagent.py  deepagent_code.py  deepagent_md.py  deepagent_test.py  external_help.py  grounding.py  interview.py  py_error_trace.py  rag.py  simargl_files.py  visual_search.py  webcrawl.py  webindex.py
_bcoder_data/proc/: action-required.py  add-save.py  assist.py  autobkup.py  autocheck.py  collect-files.py  ctx_cut.py  ctx_expand.py  extract-code.py  extract-files.py  extract-list.py  grounding-check.py  ladder.py  md.py  mdx.py  pattern-gate.py  rude_words.py  scan-save.py  secret_check.py  sql_readonly_guard.py  (+1 more)
tests/: test_utils.py
(+7 files in other folders)
